# imgui_rs_template

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/support/: lib.rs
