[package]
name = "imgui_rs_template"
version = "0.1.0"
edition = "2018"
authors = ["github/felipetesc"]
homepage = "https://www.github.com/felipetesc/imgui_template"
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
imgui = "0.8.0"
imgui-glium-renderer = "0.8.0"
imgui-winit-support = "0.8.0"
winit = "0.25.0"
glium = "0.30.2"
